--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -41,9 +41,9 @@ administration.runtime.configuration.favouriteCountry = País Preferit
 administration.runtime.configuration.joker = Configuració Joker-Aposta
 administration.runtime.configuration.jokerMaxCount.title = max. Joker Count
 administration.runtime.configuration.passwordForReset = Contrasenya usada després del restabliment de contrasenya
-administration.runtime.configuration.pointsFinalWinner.title = Punts per al campió
-administration.runtime.configuration.pointsSemiFinalWinner.title = Punts per al subcampió
-administration.runtime.configuration.pointsThirdFinalWinner.title = Punts per al 3r guanyador
+administration.runtime.configuration.pointsFinalWinner.title=campió
+administration.runtime.configuration.pointsSemiFinalWinner.title=subcampió
+administration.runtime.configuration.pointsThirdFinalWinner.title=3r guanyador
 administration.runtime.configuration.showDemoDataNavigationEntry = Dades de demostració de l'entrada del menú
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Mostra l'entrada del menú de dades de demostració a la barra de navegació.
 administration.runtime.configuration.timeZone = Zona horària
