--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -41,9 +41,9 @@ administration.runtime.configuration.favouriteCountry                    = Count
 administration.runtime.configuration.joker                               = Configuration Joker-Bet
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Used password after password reset
-administration.runtime.configuration.pointsFinalWinner.title             = Points for champion
-administration.runtime.configuration.pointsSemiFinalWinner.title         = Points for vice champion
-administration.runtime.configuration.pointsThirdFinalWinner.title        = Points for 3rd Winner
+administration.runtime.configuration.pointsFinalWinner.title=champion
+administration.runtime.configuration.pointsSemiFinalWinner.title=vice champion
+administration.runtime.configuration.pointsThirdFinalWinner.title=3rd winner
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
 administration.runtime.configuration.timeZone                            = Time Zone
