--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -41,9 +41,9 @@ administration.runtime.configuration.favouriteCountry                    = Ulubi
 administration.runtime.configuration.joker                               = Konfiguracja Joker\u00F3w
 administration.runtime.configuration.jokerMaxCount.title                 = Maksymalna liczba Joker\u00F3w
 administration.runtime.configuration.passwordForReset                    = Has\u0142o ustawione po zresetowaniu
-administration.runtime.configuration.pointsFinalWinner.title             = Punkty za mistrza
-administration.runtime.configuration.pointsSemiFinalWinner.title         = Punkty za wicemistrza
-administration.runtime.configuration.pointsThirdFinalWinner.title        = Punkty za trzecie miejsce
+administration.runtime.configuration.pointsFinalWinner.title=mistrza
+administration.runtime.configuration.pointsSemiFinalWinner.title=wicemistrza
+administration.runtime.configuration.pointsThirdFinalWinner.title=trzecie miejsce
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
 administration.runtime.configuration.timeZone                            = Strefa czasowa
