--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -41,9 +41,9 @@ administration.runtime.configuration.favouriteCountry                    = País
 administration.runtime.configuration.joker                               = Configuración Joker-Apuesta
 administration.runtime.configuration.jokerMaxCount.title                 = max. Joker Count
 administration.runtime.configuration.passwordForReset                    = Contraseña usada después del restablecimiento de contraseña
-administration.runtime.configuration.pointsFinalWinner.title             = Puntos para el campeón
-administration.runtime.configuration.pointsSemiFinalWinner.title         = Puntos para el subcampeón
-administration.runtime.configuration.pointsThirdFinalWinner.title        = Puntos para el 3.er ganador
+administration.runtime.configuration.pointsFinalWinner.title=campeón
+administration.runtime.configuration.pointsSemiFinalWinner.title=subcampeón
+administration.runtime.configuration.pointsThirdFinalWinner.title=3.er ganador
 administration.runtime.configuration.showDemoDataNavigationEntry         = Datos de demostración de la entrada del menú
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Mostrar la entrada del menú de datos de demostración en la barra de navegación.
 administration.runtime.configuration.timeZone                            = Zona horaria
