added swedish language

--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -622,3 +622,4 @@ administration.runtime.configuration.theme=Layout Theme
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=You are not allowed to edit this user!
+language.sv=swedish
