--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -623,3 +623,4 @@ administration.runtime.configuration.theme=Motyw układu
 administration.runtime.configuration.layout=Układ
 administration.runtime.configuration.navbarlayout=Układ paska nawigacyjnego
 user.edited.notAllowed=Nie możesz edytować tego użytkownika!
+language.sv=szwedzki
