--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -622,3 +622,4 @@ administration.runtime.configuration.theme=Tema
 administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navigeringsfält
 user.edited.notAllowed=Du har inte rättigheter till att redigera den här användaren!
+language.sv=svenska
