--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -623,3 +623,4 @@ administration.runtime.configuration.theme=Tema de disseny
 administration.runtime.configuration.layout=Disseny
 administration.runtime.configuration.navbarlayout=Disseny de la barra de navegació
 user.edited.notAllowed=No teniu permís per editar aquest usuari!
+language.sv=suec
