refactoring language selector

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -405,11 +405,10 @@ info.prices.edit.button = Editar premis
 info.rules.edit.button = Edita regles
 
 joker.matches = Partits de Comodí (Joker)
-
-language.de = Alemany
-language.en = Anglès
-language.pl = Polonès
-language.es = Español
+language.de=alemany
+language.en=anglès
+language.pl=polonès
+language.es=español
 
 lastlogins.title = Últims inicis de sessió dels usuaris
 
@@ -617,7 +616,7 @@ importexport.export.data=Exportar dades com a fitxer JSON
 importexport.export.name=Exportar dades
 importexport.import.file=Importar dades (JSON)
 importexport.subtitle=Tots els usuaris, partits i apostes seran importats i exportats.
-language.ca=Català
+language.ca=català
 country.cat=Catalunya
 administration.runtime.configuration.theme=Tema de disseny
 administration.runtime.configuration.layout=Disseny
