--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -405,12 +405,11 @@ info.prices.edit.button = Editar premios
 info.rules.edit.button  = Editar reglas
 
 joker.matches = Partidos de Comodín (Joker)
-
-language.de = Alemán
-language.en = Inglés
-language.pl = Polaco
-language.es = Español
-language.ca = Català
+language.de=alemán
+language.en=inglés
+language.pl=polaco
+language.es=español
+language.ca=català
 
 lastlogins.title = Últimos inicios de sesión de los usuarios
 
