--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -404,10 +404,9 @@ info.prices.edit.button = Redigera priser
 info.rules.edit.button  = Redigera regler
 
 joker.matches = Jokermatcher
-
-language.de = Tyska
-language.en = Engelska
-language.pl = Polska
+language.de=tyska
+language.en=engelska
+language.pl=polska
 
 lastlogins.title = Användarnas senaste inloggningar
 
@@ -615,8 +614,8 @@ importexport.export.data=Exportera data som JSON-fil
 importexport.export.name=Exportera data
 importexport.import.file=Importera data (JSON)
 importexport.subtitle=Alla användare, matcher och tips kommer att importeras och exporteras.
-language.ca=Katalanska
-language.es=Spanska
+language.ca=katalanska
+language.es=spanska
 country.cat=Katalonien
 administration.runtime.configuration.theme=Tema
 administration.runtime.configuration.layout=Layout
