bugfix: translation sambia in german

--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -288,7 +288,7 @@ country.vin           = St. Vincent Gren.
 country.vir           = Virgin Inseln
 country.wales         = Wales
 country.yem           = Yemen
-country.zam           = Zambia
+country.zam=Sambia
 
 error.msg.unexpectedError = Es ist ein Fehler aufgetreten!
 error.title               = Fehler
