added menu entry for matches of yesterday

--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -625,3 +625,4 @@ administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=Du hast keine Berechtigungen diesen Benutzer zu bearbeiten!
 language.sv=schwedisch
+yesterday.matches=gestrige Spiele
