--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -623,3 +623,4 @@ administration.runtime.configuration.layout=Layout
 administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=You are not allowed to edit this user!
 language.sv=swedish
+yesterday.matches=matches of yesterday
