--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -623,3 +623,4 @@ administration.runtime.configuration.layout=Diseño
 administration.runtime.configuration.navbarlayout=Diseño de la barra de navegación
 user.edited.notAllowed=¡No tienes permiso para editar este usuario!
 language.sv=sueco
+yesterday.matches=partidos de ayer
