--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -624,3 +624,4 @@ administration.runtime.configuration.layout=Układ
 administration.runtime.configuration.navbarlayout=Układ paska nawigacyjnego
 user.edited.notAllowed=Nie możesz edytować tego użytkownika!
 language.sv=szwedzki
+yesterday.matches=mecze z wczoraj
