limit photo uploads per user

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -624,3 +624,6 @@ administration.runtime.configuration.navbarlayout=Disseny de la barra de navegac
 user.edited.notAllowed=No teniu permís per editar aquest usuari!
 language.sv=suec
 yesterday.matches=partits d'ahir
+administration.runtime.configuration.imageUploadLimit=Màx. nombre de pujades de fotos per usuari
+administration.runtime.configuration.imageUploadLimit.title=Nombre de fotos
+image.upload.msg.limitReached=Heu penjat {0} de màx. {1} fotos.
