--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -626,3 +626,6 @@ administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=Du hast keine Berechtigungen diesen Benutzer zu bearbeiten!
 language.sv=schwedisch
 yesterday.matches=gestrige Spiele
+administration.runtime.configuration.imageUploadLimit=Max. Anzahl an Foto-Uploads pro Benutzer
+administration.runtime.configuration.imageUploadLimit.title=Anzahl Fotos
+image.upload.msg.limitReached=Du hast bereits {0} von max. {1} Fotos hochgeladen.
