--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -624,3 +624,6 @@ administration.runtime.configuration.navbarlayout=Navbar Layout
 user.edited.notAllowed=You are not allowed to edit this user!
 language.sv=swedish
 yesterday.matches=matches of yesterday
+administration.runtime.configuration.imageUploadLimit.title=Number of photos
+image.upload.msg.limitReached=You have uploaded {0} of max. {1} photos.
+administration.runtime.configuration.imageUploadLimit=Max. number of photo uploads per user
