--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -624,3 +624,6 @@ administration.runtime.configuration.navbarlayout=Diseño de la barra de navegac
 user.edited.notAllowed=¡No tienes permiso para editar este usuario!
 language.sv=sueco
 yesterday.matches=partidos de ayer
+administration.runtime.configuration.imageUploadLimit.title=Número de Fotos
+image.upload.msg.limitReached=Has subido {0} de máx. {1} fotos.
+administration.runtime.configuration.imageUploadLimit=Máx. número de fotos subidas por usuario
