--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -623,3 +623,6 @@ administration.runtime.configuration.navbarlayout=Navigeringsfält
 user.edited.notAllowed=Du har inte rättigheter till att redigera den här användaren!
 language.sv=svenska
 yesterday.matches=gårdagens matcher
+administration.runtime.configuration.imageUploadLimit.title=Antal foton
+image.upload.msg.limitReached=Du har laddat upp {0} av max. {1} foton.
+administration.runtime.configuration.imageUploadLimit=Max. antal fotouppladdningar per användare
