--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -625,3 +625,6 @@ administration.runtime.configuration.navbarlayout=Układ paska nawigacyjnego
 user.edited.notAllowed=Nie możesz edytować tego użytkownika!
 language.sv=szwedzki
 yesterday.matches=mecze z wczoraj
+administration.runtime.configuration.imageUploadLimit.title=Liczba zdjęć
+image.upload.msg.limitReached=Przesłałeś {0} z maks. {1} zdjęcia.
+administration.runtime.configuration.imageUploadLimit=Maks. liczba przesłanych zdjęć na użytkownika
