limit photo uploads per user

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -627,3 +627,4 @@ yesterday.matches=partits d'ahir
 administration.runtime.configuration.imageUploadLimit=Màx. nombre de pujades de fotos per usuari
 administration.runtime.configuration.imageUploadLimit.title=Nombre de fotos
 image.upload.msg.limitReached=Heu penjat {0} de màx. {1} fotos.
+administration.runtime.configuration.imageUploadLimit.tooltip=Deixeu en blanc si no hi ha límit.
