--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -627,3 +627,4 @@ yesterday.matches=matches of yesterday
 administration.runtime.configuration.imageUploadLimit.title=Number of photos
 image.upload.msg.limitReached=You have uploaded {0} of max. {1} photos.
 administration.runtime.configuration.imageUploadLimit=Max. number of photo uploads per user
+administration.runtime.configuration.imageUploadLimit.tooltip=Leave blank if no limit exists.
