--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -627,3 +627,4 @@ yesterday.matches=partidos de ayer
 administration.runtime.configuration.imageUploadLimit.title=Número de Fotos
 image.upload.msg.limitReached=Has subido {0} de máx. {1} fotos.
 administration.runtime.configuration.imageUploadLimit=Máx. número de fotos subidas por usuario
+administration.runtime.configuration.imageUploadLimit.tooltip=Déjelo en blanco si no existe límite.
