--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -628,3 +628,4 @@ yesterday.matches=mecze z wczoraj
 administration.runtime.configuration.imageUploadLimit.title=Liczba zdjęć
 image.upload.msg.limitReached=Przesłałeś {0} z maks. {1} zdjęcia.
 administration.runtime.configuration.imageUploadLimit=Maks. liczba przesłanych zdjęć na użytkownika
+administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, jeśli nie istnieje żaden limit.
