--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -626,3 +626,4 @@ yesterday.matches=gårdagens matcher
 administration.runtime.configuration.imageUploadLimit.title=Antal foton
 image.upload.msg.limitReached=Du har laddat upp {0} av max. {1} foton.
 administration.runtime.configuration.imageUploadLimit=Max. antal fotouppladdningar per användare
+administration.runtime.configuration.imageUploadLimit.tooltip=Lämna tomt om ingen gräns finns.
