limit photo uploads per user

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -626,5 +626,5 @@ language.sv=suec
 yesterday.matches=partits d'ahir
 administration.runtime.configuration.imageUploadLimit=Màx. nombre de pujades de fotos per usuari
 administration.runtime.configuration.imageUploadLimit.title=Nombre de fotos
-image.upload.msg.limitReached=Heu penjat {0} de màx. {1} fotos.
+image.upload.msg.limitReached=Heu assolit el màxim. nombre de pujades de fotos ({0}).
 administration.runtime.configuration.imageUploadLimit.tooltip=Deixeu en blanc si no hi ha límit.
