--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -628,5 +628,5 @@ language.sv=schwedisch
 yesterday.matches=gestrige Spiele
 administration.runtime.configuration.imageUploadLimit=Max. Anzahl an Foto-Uploads pro Benutzer
 administration.runtime.configuration.imageUploadLimit.title=Anzahl Fotos
-image.upload.msg.limitReached=Du hast bereits {0} von max. {1} Fotos hochgeladen.
+image.upload.msg.limitReached=Du hast die max. Anzahl an Foto-Uploads ({0}) erreicht.
 administration.runtime.configuration.imageUploadLimit.tooltip=Bitte leer lassen, wenn kein Limit besteht.
