--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -625,6 +625,6 @@ user.edited.notAllowed=You are not allowed to edit this user!
 language.sv=swedish
 yesterday.matches=matches of yesterday
 administration.runtime.configuration.imageUploadLimit.title=Number of photos
-image.upload.msg.limitReached=You have uploaded {0} of max. {1} photos.
+image.upload.msg.limitReached=You have reached the max. number of photo uploads ({0}).
 administration.runtime.configuration.imageUploadLimit=Max. number of photo uploads per user
 administration.runtime.configuration.imageUploadLimit.tooltip=Leave blank if no limit exists.
