--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -625,6 +625,6 @@ user.edited.notAllowed=¡No tienes permiso para editar este usuario!
 language.sv=sueco
 yesterday.matches=partidos de ayer
 administration.runtime.configuration.imageUploadLimit.title=Número de Fotos
-image.upload.msg.limitReached=Has subido {0} de máx. {1} fotos.
+image.upload.msg.limitReached=Has alcanzado el máximo. número de cargas de fotos ({0}).
 administration.runtime.configuration.imageUploadLimit=Máx. número de fotos subidas por usuario
 administration.runtime.configuration.imageUploadLimit.tooltip=Déjelo en blanco si no existe límite.
