--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -626,6 +626,6 @@ user.edited.notAllowed=Nie możesz edytować tego użytkownika!
 language.sv=szwedzki
 yesterday.matches=mecze z wczoraj
 administration.runtime.configuration.imageUploadLimit.title=Liczba zdjęć
-image.upload.msg.limitReached=Przesłałeś {0} z maks. {1} zdjęcia.
+image.upload.msg.limitReached=Osiągnąłeś maksimum. liczba przesłanych zdjęć ({0}).
 administration.runtime.configuration.imageUploadLimit=Maks. liczba przesłanych zdjęć na użytkownika
 administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, jeśli nie istnieje żaden limit.
