--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -624,6 +624,6 @@ user.edited.notAllowed=Du har inte rättigheter till att redigera den här anvä
 language.sv=svenska
 yesterday.matches=gårdagens matcher
 administration.runtime.configuration.imageUploadLimit.title=Antal foton
-image.upload.msg.limitReached=Du har laddat upp {0} av max. {1} foton.
+image.upload.msg.limitReached=Du har nått max. antal fotouppladdningar ({0}).
 administration.runtime.configuration.imageUploadLimit=Max. antal fotouppladdningar per användare
 administration.runtime.configuration.imageUploadLimit.tooltip=Lämna tomt om ingen gräns finns.
