--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -151,6 +151,7 @@ country.fra           = France
 country.fro           = Faroe Islands
 country.gab           = Gabon
 country.gam           = Gambia
+country.gbr           = Great Britain
 country.geo           = Georgia
 country.gha           = Ghana
 country.gib           = Gibraltar
