add czech translation

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -409,6 +409,7 @@ language.de=alemany
 language.en=anglès
 language.pl=polonès
 language.es=español
+language.cze=txec
 
 lastlogins.title = Últims inicis de sessió dels usuaris
 
