--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -408,6 +408,7 @@ joker.matches = Mecze z Jokerem
 language.de = niemiecki
 language.en = angielski
 language.pl = polski
+language.cze = czeski
 
 lastlogins.title = Ostatnie logowania u\u017Cytkownik\u00F3w
 
