--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -407,6 +407,7 @@ joker.matches = Jokermatcher
 language.de=tyska
 language.en=engelska
 language.pl=polska
+language.cze=tjeckiska
 
 lastlogins.title = Användarnas senaste inloggningar
 
