feat: added best betting user of today

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -630,3 +630,4 @@ administration.runtime.configuration.imageUploadLimit=Màx. nombre de pujades de
 administration.runtime.configuration.imageUploadLimit.title=Nombre de fotos
 image.upload.msg.limitReached=Heu assolit el màxim. nombre de pujades de fotos ({0}).
 administration.runtime.configuration.imageUploadLimit.tooltip=Deixeu en blanc si no hi ha límit.
+ranking.topTipperOfToday.tooltip=El millor usuari d'apostes d'avui
