--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -630,3 +630,4 @@ administration.runtime.configuration.imageUploadLimit.title=Number of photos
 image.upload.msg.limitReached=You have reached the max. number of photo uploads ({0}).
 administration.runtime.configuration.imageUploadLimit=Max. number of photo uploads per user
 administration.runtime.configuration.imageUploadLimit.tooltip=Leave blank if no limit exists.
+ranking.topTipperOfToday.tooltip=Best betting user of today
