--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -595,7 +595,7 @@ standings.title=Gruppentabelle
 administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
 administration.createTestDataForAll=komplette Testdaten anlegen
 pointcourse.title=Punkteverlauf
-pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand. 
+pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand.
 msg.bet.betting.random.dice.all=Alle Spiele wurden ausgewürfelt.
 bet.listOpen.dice.all=Alle Spiele würfeln.
 standings.legend=Legende
@@ -632,3 +632,4 @@ administration.runtime.configuration.imageUploadLimit=Max. Anzahl an Foto-Upload
 administration.runtime.configuration.imageUploadLimit.title=Anzahl Fotos
 image.upload.msg.limitReached=Du hast die max. Anzahl an Foto-Uploads ({0}) erreicht.
 administration.runtime.configuration.imageUploadLimit.tooltip=Bitte leer lassen, wenn kein Limit besteht.
+ranking.topTipperOfToday.tooltip=Tipper des Tages
