using different translations for matchday winner

--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -630,4 +630,4 @@ administration.runtime.configuration.imageUploadLimit.title=Número de Fotos
 image.upload.msg.limitReached=Has alcanzado el máximo. número de cargas de fotos ({0}).
 administration.runtime.configuration.imageUploadLimit=Máx. número de fotos subidas por usuario
 administration.runtime.configuration.imageUploadLimit.tooltip=Déjelo en blanco si no existe límite.
-ranking.topTipperOfToday.tooltip=Mejor usuaria de apuestas de hoy.
+ranking.topTipperOfToday.tooltip=Ganadora de la jornada
