feat: integrated showing past matches

--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -631,3 +631,4 @@ administration.runtime.configuration.imageUploadLimit.title=Nombre de fotos
 image.upload.msg.limitReached=Heu assolit el màxim. nombre de pujades de fotos ({0}).
 administration.runtime.configuration.imageUploadLimit.tooltip=Deixeu en blanc si no hi ha límit.
 ranking.topTipperOfToday.tooltip=Guanyador de la jornada
+all.past.matches=Partits passats
