--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -51,6 +51,7 @@ administration.testResultsAllUsers                                       = Teste
 administration.title                                                     = Administration
 
 all.matches = alle Spiele
+all.past.matches=vergangene Spiele
 
 app.dateformat            = EEE dd. MMMM yyyy HH:mm
 app.dateformatWithSeconds = EEE dd. MMMM yyyy HH:mm:ss
