--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -631,3 +631,4 @@ image.upload.msg.limitReached=You have reached the max. number of photo uploads 
 administration.runtime.configuration.imageUploadLimit=Max. number of photo uploads per user
 administration.runtime.configuration.imageUploadLimit.tooltip=Leave blank if no limit exists.
 ranking.topTipperOfToday.tooltip=Matchday winner
+all.past.matches=Past Matches
