--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -631,3 +631,4 @@ image.upload.msg.limitReached=Has alcanzado el máximo. número de cargas de fot
 administration.runtime.configuration.imageUploadLimit=Máx. número de fotos subidas por usuario
 administration.runtime.configuration.imageUploadLimit.tooltip=Déjelo en blanco si no existe límite.
 ranking.topTipperOfToday.tooltip=Ganadora de la jornada
+all.past.matches=Partidos pasados
