--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -631,3 +631,4 @@ image.upload.msg.limitReached=Osiągnąłeś maksimum. liczba przesłanych zdję
 administration.runtime.configuration.imageUploadLimit=Maks. liczba przesłanych zdjęć na użytkownika
 administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, jeśli nie istnieje żaden limit.
 ranking.topTipperOfToday.tooltip=Zwyci?zca kolejki
+all.past.matches=Poprzednie mecze
