--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -630,3 +630,4 @@ image.upload.msg.limitReached=Du har nått max. antal fotouppladdningar ({0}).
 administration.runtime.configuration.imageUploadLimit=Max. antal fotouppladdningar per användare
 administration.runtime.configuration.imageUploadLimit.tooltip=Lämna tomt om ingen gräns finns.
 ranking.topTipperOfToday.tooltip=Matchdagsvinnare
+all.past.matches=Tidigare matcher
