renamed Czech Republic filesy

--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -324,7 +324,7 @@ excel.upload.button                    = Datei hochladen
 excel.upload.file                      = Excel-Datei hochladen
 excel.upload.msg.failed                = Es ist ein Fehler beim Import der Excel-Datei aufgetreten. Grund: {0}
 excel.upload.msg.noExcelFile           = Die hochgeladene Datei ist keine Excel-Datei (.xlsx)!
-excel.upload.msg.noFileGiven=Bitte wähle die Excel-Datei zum Hochladen aus!
+excel.upload.msg.noFileGiven=Bitte w\u00E4hle die Excel-Datei zum Hochladen aus!
 excel.upload.msg.saved                 = Die Excel-Datei wurde erfolgreich importiert!
 
 extra_bets.finalWinner      = Meister
@@ -371,7 +371,7 @@ group.title.roundOfSixteen   = Achtelfinale
 group.title.semiFinal        = Halbfinale
 
 image.gallery.downloadAll             = Alle Fotos herunterladen
-image.gallery.msg.delete.perm.denied=Du kannst nur deine eigenen Fotos löschen!
+image.gallery.msg.delete.perm.denied=Du kannst nur deine eigenen Fotos l\u00F6schen!
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
 image.gallery.msg.noImages            = Keine Fotos vorhanden!
 image.gallery.title                   = Fotoalbum
@@ -380,7 +380,7 @@ image.group.button.delete             = Gruppe l\u00F6schen
 image.group.id                        = Gruppen ID
 image.group.msg.added                 = Die Gruppe mit dem Namen "{0}" wurde hinzugef\u00FCgt!
 image.group.msg.deleted               = Die Gruppe wurde gel\u00F6scht!
-image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte lösche die Fotos zuerst!
+image.group.msg.deletionHasReferences = Es gibt noch Fotos in dieser Gruppe! Bitte l\u00F6sche die Fotos zuerst!
 image.group.msg.groupExist            = Eine Gruppe mit dem Namen "{0}" existiert bereits!
 image.group.msg.updated               = Die Gruppe "{0}" wurde aktualisiert!
 image.group.name                      = Gruppenname
@@ -394,7 +394,7 @@ image.upload.groupName                = Gruppe
 image.upload.id                       = Foto ID
 image.upload.msg.editGroup            = Gruppen bearbeiten
 image.upload.msg.failed               = Fehler beim Speichern des Fotos!
-image.upload.msg.noFileGiven=Bitte wähle zuerst eine Datei aus!
+image.upload.msg.noFileGiven=Bitte w\u00E4hle zuerst eine Datei aus!
 image.upload.msg.noJpegImage          = Es sind nur Fotos vom Typ JPEG erlaubt!
 image.upload.msg.saved                = Das Foto wurde erfolgreich gespeichert!
 image.upload.rotate                   = Rotation
@@ -412,7 +412,7 @@ joker.matches = Spiele mit Joker
 language.de = deutsch
 language.en = englisch
 language.pl = polnisch
-language.cze = tschechisch
+language.cs = tschechisch
 
 lastlogins.title = Letzte Logins der Benutzer
 
@@ -509,7 +509,7 @@ statistics.title                   = Punkte-Statistik
 systeminfo.title = Systeminformationen
 
 upcoming.matches = anstehende Spiele
-user.changePassword.firstLogin=Du meldest dich das erste mal an oder dein Passwort wurde zur\u00FCckgesetzt. Bitte ändere daher dein Passwort!
+user.changePassword.firstLogin=Du meldest dich das erste mal an oder dein Passwort wurde zur\u00FCckgesetzt. Bitte \u00E4ndere daher dein Passwort!
 user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
@@ -568,9 +568,9 @@ registration.text=Hast du einen Registrierungs-Code? Dann kannst du dich hier re
 administration.runtime.configuration.registrationCode=Selbstregistrierung
 administration.runtime.configuration.registrationCode.title=Registrierungs-Code
 administration.runtime.configuration.selfRegistrationEnabled=Selbstregistrierung aktivieren
-administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung haben Benutzer die Möglichkeit selbst einen Account anzulegen.
-msg.registration.error.invalidToken=Der eingegebene Registrierungs-Code ist ungültig!
-back.to.login=Zurück zum Login
+administration.runtime.configuration.selfRegistrationEnabled.tooltip=Mit der Selbstregistrierung haben Benutzer die M\u00F6glichkeit selbst einen Account anzulegen.
+msg.registration.error.invalidToken=Der eingegebene Registrierungs-Code ist ung\u00FCltig!
+back.to.login=Zur\u00FCck zum Login
 msg.registration.info.success=Die Registrierung war erfolgreich. Du kannst dich nun anmelden.
 registration.password=Passwort
 registration.passwordRepeat=Passwortwiederholung
@@ -584,30 +584,30 @@ user.importexport.export.name=Benutzerdaten exportieren
 user.importexport.export.users=Benutzerdaten als JSON exportieren
 user.importexport.import.file=Benutzerdaten importieren (JSON-Datei)
 user.importexport.upload.button=JSON-Datei hochladen
-user.importexport.upload.msg.noFileGiven=Bitte wähle eine Datei aus.
+user.importexport.upload.msg.noFileGiven=Bitte w\u00E4hle eine Datei aus.
 user.importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 user.importexport.upload.msg.saved=Es wurden {0} Benutzer importiert.
 user.importexport.upload.msg.failed=Es ist ein Fehler beim Import von Benutzerdaten gekommen. Fehler: {0}
 administration.numberOfTestUsers.title=Anzahl Testbenutzer
 administration.msg.info.testUsersCreated=Es wurden {0} Testbenutzer angelegt.
-administration.deleteAllUsers=Alle Benutzer löschen
-administration.msg.info.deleteAllUsers=Alle Benutzer wurden gelöscht.
+administration.deleteAllUsers=Alle Benutzer l\u00F6schen
+administration.msg.info.deleteAllUsers=Alle Benutzer wurden gel\u00F6scht.
 standings.title=Gruppentabelle
 administration.msg.info.createTestDataForAll=komplette Testdaten werden angelegt
 administration.createTestDataForAll=komplette Testdaten anlegen
 pointcourse.title=Punkteverlauf
-pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und höchsten Punktestand.
-msg.bet.betting.random.dice.all=Alle Spiele wurden ausgewürfelt.
-bet.listOpen.dice.all=Alle Spiele würfeln.
+pointcourse.subtitle=Eigener Punkteverlauf im Vergleich zum niedrigsten und h\u00F6chsten Punktestand.
+msg.bet.betting.random.dice.all=Alle Spiele wurden ausgew\u00FCrfelt.
+bet.listOpen.dice.all=Alle Spiele w\u00FCrfeln.
 standings.legend=Legende
 standings.matchesPlayed=Anzahl Spiele
 standings.winner=Gewinner
 standings.draw=unentschieden
 standings.looser=Verlierer
-standings.goals=Torverhältnis
+standings.goals=Torverh\u00E4ltnis
 standings.goalDifference=Tordifferenz
 standings.points=Punkte
-image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gelöscht werden!
+image.group.msg.deletionNotAllowed=Die Gruppe kann nicht gel\u00F6scht werden!
 registration.child=Kind
 pdf.export.child=Kind
 importexport.title=Im-/Export
@@ -615,7 +615,7 @@ importexport.export.name=Daten exportieren
 importexport.export.data=Daten als JSON exportieren
 importexport.import.file=Daten importieren (JSON-Datei)
 importexport.upload.button=JSON-Datei hochladen
-importexport.upload.msg.noFileGiven=Bitte wähle eine Datei aus.
+importexport.upload.msg.noFileGiven=Bitte w\u00E4hle eine Datei aus.
 importexport.upload.msg.noJsonFile=Es handelt sich bei der Datei nicht um eine JSON-Datei.
 importexport.upload.msg.saved=Datenimport abgeschlossen.
 importexport.upload.msg.failed=Es ist ein Fehler beim Import gekommen. Fehler: {0}
