--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -409,7 +409,7 @@ joker.matches = Joker Matches
 language.de = german
 language.en = english
 language.pl = polish
-language.cze = czech
+language.cs = czech
 
 lastlogins.title = Last logins of users
 
