--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -1,4 +1,4 @@
-registration.passwordRepeat=Powtórz hasło
+registration.passwordRepeat=Powt\u00F3rz has\u0142o
 active.users.title = aktualnie zalogowani u\u017Cytkownicy
 
 administration.backup.executeBackupButton                                = Stw\u00F3rz kopi\u0119 zapasow\u0105
@@ -28,7 +28,7 @@ administration.msg.info.demoResultsCreated                               = Testo
 administration.msg.info.logLevelChanged                                  = Poziom logowania zosta\u0142 zmieniony na "{0}"!
 administration.msg.info.randomMatchesCreated                             = Testowe losowe mecze zosta\u0142y stworzone pomy\u015Blnie
 administration.msg.info.runtimeConfigSaved                               = Zapisano konfiguracje.
-administration.runtime.configuration=Ustawienia konfiguracji środowiska wykonawczego
+administration.runtime.configuration=Ustawienia konfiguracji \u015Brodowiska wykonawczego
 administration.runtime.configuration.changePasswordOnFirstLogin          = Zmie\u0144 has\u0142o podczas pierwszego logowania
 administration.runtime.configuration.changePasswordOnFirstLogin.tooltip  = U\u017Cytkownicy musz\u0105 zmieni\u0107 swoje has\u0142o podczas pierwszego logowania.
 administration.runtime.configuration.currentTime                         = Aktualny czas
@@ -200,7 +200,7 @@ country.mas           = Malezja
 country.mda           = Mo\u0142dawia
 country.mdv           = Malediwy
 country.mex           = Meksyk
-country.mkd=Macedonia Północna
+country.mkd=Macedonia P\u00F3\u0142nocna
 country.mli           = Mali
 country.mlt           = Malta
 country.mne           = Czarnog\u00F3ra
@@ -408,7 +408,7 @@ joker.matches = Mecze z Jokerem
 language.de = niemiecki
 language.en = angielski
 language.pl = polski
-language.cze = czeski
+language.cs = czeski
 
 lastlogins.title = Ostatnie logowania u\u017Cytkownik\u00F3w
 
@@ -550,85 +550,86 @@ ranking.show.details.button=Poka\u017C / ukryj szczeg\u00F3\u0142y
 user.username.changeNotAllowed=Ta nazwa u\u017Cytkownika nie jest mo\u017Cliwa do zmiany!
 finishednoresult.matches=uko\u0144czone mecze bez wyniku
 ranking.button.pdf.export=PDF-Export
-pdf.export.username=Nazwa Użytkownika
+pdf.export.username=Nazwa U\u017Cytkownika
 pdf.export.correctResult=poprawne wyniki
-pdf.export.goalDifference=różnica bramek
-pdf.export.totalPoints=Suma punktów
+pdf.export.goalDifference=r\u00F3\u017Cnica bramek
+pdf.export.totalPoints=Suma punkt\u00F3w
 pdf.export.button=eksport PDF
 page=Strona
-registration.title=Rejestracja Użytkownika
+registration.title=Rejestracja U\u017Cytkownika
 registration.link.text=Rejestracja
 registration.token=Kod rejestracyjny
-registration.username=Nazwa Użytkownika
-registration.text=Czy masz kod rejestracyjny? Zarejestruj się tutaj:
-administration.runtime.configuration.registrationCode=Rejestracja własna
+registration.username=Nazwa U\u017Cytkownika
+registration.text=Czy masz kod rejestracyjny? Zarejestruj si\u0119 tutaj:
+administration.runtime.configuration.registrationCode=Rejestracja w\u0142asna
 administration.runtime.configuration.registrationCode.title=kod rejestracyjny
-administration.runtime.configuration.selfRegistrationEnabled=Aktywuj samodzielną rejestrację
+administration.runtime.configuration.selfRegistrationEnabled=Aktywuj samodzieln\u0105 rejestracj\u0119
 administration.runtime.configuration.selfRegistrationEnabled.tooltip=Autorejestracja umo?liwia u?ytkownikom utworzenie w?asnego konta u?ytkownika.
-msg.registration.error.invalidToken=Podany kod rejestracyjny jest nieprawidłowy!
-back.to.login=powrót do logowania
-msg.registration.info.success=Pomyślnie zarejestrowano. Proszę się zalogować.
-registration.password=hasło
-administration.runtime.configuration.misc=Różne ustawienia
+msg.registration.error.invalidToken=Podany kod rejestracyjny jest nieprawid\u0142owy!
+back.to.login=powr\u00F3t do logowania
+msg.registration.info.success=Pomy\u015Blnie zarejestrowano. Prosz\u0119 si\u0119 zalogowa\u0107.
+registration.password=has\u0142o
+administration.runtime.configuration.misc=R\u00F3\u017Cne ustawienia
 group.title.I=Grupa I
 group.title.J=Grupa J
 group.entry.GROUP_J=Grupa J
 calendar.ics.title={0} vs. {1}
 calendar.ics.download.text=Uwaga dopasowanie w kalendarzu
 user.importexport.upload.msg.noFileGiven=Wybierz plik JSON do wgrania
-user.importexport.upload.msg.failed=Wystąpił błąd podczas importowania danych użytkownika. Błąd: {0}
-user.importexport.export.name=Eksportuj dane użytkownika
-user.importexport.export.users=Eksportuj dane użytkownika jako JSON
-user.importexport.import.file=Importuj dane użytkownika (plik JSON)
-user.importexport.title=Dane użytkownika Import / eksport
-user.importexport.upload.button=Prześlij plik JSON
+user.importexport.upload.msg.failed=Wyst\u0105pi\u0142 b\u0142\u0105d podczas importowania danych u\u017Cytkownika. B\u0142\u0105d: {0}
+user.importexport.export.name=Eksportuj dane u\u017Cytkownika
+user.importexport.export.users=Eksportuj dane u\u017Cytkownika jako JSON
+user.importexport.import.file=Importuj dane u\u017Cytkownika (plik JSON)
+user.importexport.title=Dane u\u017Cytkownika Import / eksport
+user.importexport.upload.button=Prze\u015Blij plik JSON
 user.importexport.upload.msg.noJsonFile=To nie jest plik JSON.
-user.importexport.upload.msg.saved=Zaimportowano dane użytkownika {0}.
-country.svn=Słowenia
-administration.numberOfTestUsers.title=Liczba użytkowników testowych
-administration.msg.info.testUsersCreated=Utworzono {0} użytkowników testowych.
-administration.deleteAllUsers=Usuń wszystkich użytkowników
-administration.msg.info.deleteAllUsers=Wszyscy użytkownicy zostali usunięci.
+user.importexport.upload.msg.saved=Zaimportowano dane u\u017Cytkownika {0}.
+country.svn=S\u0142owenia
+administration.numberOfTestUsers.title=Liczba u\u017Cytkownik\u00F3w testowych
+administration.msg.info.testUsersCreated=Utworzono {0} u\u017Cytkownik\u00F3w testowych.
+administration.deleteAllUsers=Usu\u0144 wszystkich u\u017Cytkownik\u00F3w
+administration.msg.info.deleteAllUsers=Wszyscy u\u017Cytkownicy zostali usuni\u0119ci.
 standings.title=Tabele
 administration.msg.info.createTestDataForAll=Tworzenie wszystkich danych testowych.
-administration.createTestDataForAll=Utwórz dane testowe dla wszystkich.
+administration.createTestDataForAll=Utw\u00F3rz dane testowe dla wszystkich.
 pointcourse.title=Kurs punktowy
-pointcourse.subtitle=Własny kurs punktowy w porównaniu do kursu najniższego i najwyższego punktu.
+pointcourse.subtitle=W\u0142asny kurs punktowy w por\u00F3wnaniu do kursu najni\u017Cszego i najwy\u017Cszego punktu.
 msg.bet.betting.random.dice.all=Wylosowano wyniki dla wszystkich meczy.
 bet.listOpen.dice.all=Losuj wszystkie mecze.
 standings.legend=Legenda
 standings.matchesPlayed=Rozegrane mecze
-standings.winner=Zwycięstwa
+standings.winner=Zwyci\u0119stwa
 standings.draw=Remisy
-standings.looser=Porażki
+standings.looser=Pora\u017Cki
 standings.goals=Bramki
-standings.goalDifference=Różnica bramek
+standings.goalDifference=R\u00F3\u017Cnica bramek
 standings.points=Punkty
-image.group.msg.deletionNotAllowed=Tej grupy nie można usunąć!
+image.group.msg.deletionNotAllowed=Tej grupy nie mo\u017Cna usun\u0105\u0107!
 registration.child=Dziecko
 pdf.export.child=Dziecko
 importexport.title=Im-/Export
-importexport.upload.button=Prześlij plik JSON
-importexport.upload.msg.failed=Wystąpił błąd podczas importowania danych. błąd: {0}
-importexport.upload.msg.noFileGiven=Proszę wybrać plik.
-importexport.upload.msg.noJsonFile=Przesłany plik nie jest plikiem JSON.
-importexport.upload.msg.saved=Import danych zakończony.
+importexport.upload.button=Prze\u015Blij plik JSON
+importexport.upload.msg.failed=Wyst\u0105pi\u0142 b\u0142\u0105d podczas importowania danych. b\u0142\u0105d: {0}
+importexport.upload.msg.noFileGiven=Prosz\u0119 wybra\u0107 plik.
+importexport.upload.msg.noJsonFile=Przes\u0142any plik nie jest plikiem JSON.
+importexport.upload.msg.saved=Import danych zako\u0144czony.
 importexport.export.data=Eksportuj dane jako plik JSON
 importexport.export.name=Eksportuj dane
 importexport.import.file=Importuj dane (JSON)
-importexport.subtitle=Wszyscy użytkownicy, mecze i zakłady zostaną zaimportowane i wyeksportowane.
-language.es=hiszpański
-language.ca=kataloński
+importexport.subtitle=Wszyscy u\u017Cytkownicy, mecze i zak\u0142ady zostan\u0105 zaimportowane i wyeksportowane.
+language.es=hiszpa\u0144ski
+language.ca=katalo\u0144ski
 country.cat=Katalonia
-administration.runtime.configuration.theme=Motyw układu
-administration.runtime.configuration.layout=Układ
-administration.runtime.configuration.navbarlayout=Układ paska nawigacyjnego
-user.edited.notAllowed=Nie możesz edytować tego użytkownika!
+administration.runtime.configuration.theme=Motyw uk\u0142adu
+administration.runtime.configuration.layout=Uk\u0142ad
+administration.runtime.configuration.navbarlayout=Uk\u0142ad paska nawigacyjnego
+user.edited.notAllowed=Nie mo\u017Cesz edytowa\u0107 tego u\u017Cytkownika!
 language.sv=szwedzki
 yesterday.matches=mecze z wczoraj
-administration.runtime.configuration.imageUploadLimit.title=Liczba zdjęć
-image.upload.msg.limitReached=Osiągnąłeś maksimum. liczba przesłanych zdjęć ({0}).
-administration.runtime.configuration.imageUploadLimit=Maks. liczba przesłanych zdjęć na użytkownika
-administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, jeśli nie istnieje żaden limit.
+administration.runtime.configuration.imageUploadLimit.title=Liczba zdj\u0119\u0107
+image.upload.msg.limitReached=Osi\u0105gn\u0105\u0142e\u015B maksimum. liczba przes\u0142anych zdj\u0119\u0107 ({0}).
+administration.runtime.configuration.imageUploadLimit=Maks. liczba przes\u0142anych zdj\u0119\u0107 na u\u017Cytkownika
+administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, je\u015Bli nie istnieje \u017Caden limit.
 ranking.topTipperOfToday.tooltip=Zwyci?zca kolejki
 all.past.matches=Poprzednie mecze
+country.gbr=Wielka Brytania
