--- a/src/main/resources/TranslationMessages_ca.properties
+++ b/src/main/resources/TranslationMessages_ca.properties
@@ -630,3 +630,6 @@ image.upload.msg.limitReached=Heu assolit el m\u00E0xim. nombre de pujades de fo
 administration.runtime.configuration.imageUploadLimit.tooltip=Deixeu en blanc si no hi ha l\u00EDmit.
 ranking.topTipperOfToday.tooltip=Guanyador de la jornada
 all.past.matches=Partits passats
+administration.testdata.title=Creaci\u00F3 de dades de prova
+administration.testdemousers.title=Prova d'usuaris de demostraci\u00F3
+administration.dangerzone.title=Zona de perill
