--- a/src/main/resources/TranslationMessages_cs.properties
+++ b/src/main/resources/TranslationMessages_cs.properties
@@ -630,3 +630,7 @@ administration.runtime.configuration.imageUploadLimit.title=Po\u010Det fotografi
 image.upload.msg.limitReached=Dos\u00E1hli jste maxim\u00E1ln\u00EDho po\u010Dtu nahran\u00FDch fotografi\u00ED ({0}).
 administration.runtime.configuration.imageUploadLimit=Maxim\u00E1ln\u00ED po\u010Det nahran\u00FDch fotografi\u00ED na u\u017Eivatele
 administration.runtime.configuration.imageUploadLimit.tooltip=Ponechte pr\u00E1zdn\u00E9, pokud \u017E\u00E1dn\u00FD limit neexistuje.
+administration.testdemousers.title=Testovat demo u\u017Eivatele
+administration.testdata.title=Vytv\u00E1\u0159en\u00ED testovac\u00EDch dat
+all.past.matches=Minul\u00E9 z\u00E1pasy
+administration.dangerzone.title=Nebezpe\u010Dn\u00E1 z\u00F3na
