--- a/src/main/resources/TranslationMessages_de.properties
+++ b/src/main/resources/TranslationMessages_de.properties
@@ -634,3 +634,6 @@ administration.runtime.configuration.imageUploadLimit.title=Anzahl Fotos
 image.upload.msg.limitReached=Du hast die max. Anzahl an Foto-Uploads ({0}) erreicht.
 administration.runtime.configuration.imageUploadLimit.tooltip=Bitte leer lassen, wenn kein Limit besteht.
 ranking.topTipperOfToday.tooltip=Tipper des Tages
+administration.testdata.title=Anlage Testdaten
+administration.testdemousers.title=Test Demo Benutzer
+administration.dangerzone.title=L\u00F6sch-Zone
