--- a/src/main/resources/TranslationMessages_en.properties
+++ b/src/main/resources/TranslationMessages_en.properties
@@ -632,3 +632,6 @@ administration.runtime.configuration.imageUploadLimit=Max. number of photo uploa
 administration.runtime.configuration.imageUploadLimit.tooltip=Leave blank if no limit exists.
 ranking.topTipperOfToday.tooltip=Matchday winner
 all.past.matches=Past Matches
+administration.testdata.title=Test Data Creation
+administration.testdemousers.title=Test Demo Users
+administration.dangerzone.title=Danger Zone
