--- a/src/main/resources/TranslationMessages_es.properties
+++ b/src/main/resources/TranslationMessages_es.properties
@@ -632,3 +632,6 @@ administration.runtime.configuration.imageUploadLimit=M\u00E1x. n\u00FAmero de f
 administration.runtime.configuration.imageUploadLimit.tooltip=D\u00E9jelo en blanco si no existe l\u00EDmite.
 ranking.topTipperOfToday.tooltip=Ganadora de la jornada
 all.past.matches=Partidos pasados
+administration.testdemousers.title=Usuarios de demostraci\u00F3n de prueba
+administration.testdata.title=Creaci\u00F3n de datos de prueba
+administration.dangerzone.title=Zona de peligro
