--- a/src/main/resources/TranslationMessages_pl.properties
+++ b/src/main/resources/TranslationMessages_pl.properties
@@ -633,3 +633,6 @@ administration.runtime.configuration.imageUploadLimit.tooltip=Pozostaw puste, je
 ranking.topTipperOfToday.tooltip=Zwyci?zca kolejki
 all.past.matches=Poprzednie mecze
 country.gbr=Wielka Brytania
+administration.testdemousers.title=U\u017Cytkownicy wersji demonstracyjnej
+administration.testdata.title=Tworzenie danych testowych
+administration.dangerzone.title=Strefa zagro\u017Cenia
