--- a/src/main/resources/TranslationMessages_sv.properties
+++ b/src/main/resources/TranslationMessages_sv.properties
@@ -631,3 +631,6 @@ administration.runtime.configuration.imageUploadLimit=Max. antal fotouppladdning
 administration.runtime.configuration.imageUploadLimit.tooltip=L\u00E4mna tomt om ingen gr\u00E4ns finns.
 ranking.topTipperOfToday.tooltip=Matchdagsvinnare
 all.past.matches=Tidigare matcher
+administration.testdemousers.title=Testa demoanv\u00E4ndare
+administration.testdata.title=Testa dataskapande
+administration.dangerzone.title=Riskzon
